@startuml
title MD – US41 Record Vaccine Administration (Corrected)

hide circle
hide methods
skinparam classAttributeIconSize 0

class Nurse {
}

class SNSUser {
  + name : String
  + citizenCardNumber : String
}

class Appointment {
  + status : AppointmentStatus
  + arrivalDateTime : DateTime
}

class VaccinationEvent {
  + lotNumber : String
  + administrationDateTime : DateTime
}

class Vaccine {
  + commercialName : String
  + brand : String
}

' Associações
Nurse "1" -- "0..*" VaccinationEvent : records >
VaccinationEvent "0..*" -- "1" Vaccine : records brand/lot of >
Appointment "1" -- "0..1" VaccinationEvent : results in >
SNSUser "1" -- "0..*" Appointment : has >

@enduml